<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/violet"
        app:title="@string/app_name" />

    <Button
        android:id="@+id/openListBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/openList"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/addPerson"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:onClick="openList"/>

    <Button
        android:id="@+id/addPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addPerson"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openListBTN"
        android:onClick="addToList"/>

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPerson"
        android:onClick="exit"/>

</androidx.constraintlayout.widget.ConstraintLayout>